kubernetes/logstash.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash-deployment
  namespace: kube-system
  labels:
    app: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:6.3.0
          ports:
            - containerPort: 5044
              name: beats
            - containerPort: 5000
              name: syslog-tcp
            - containerPort: 5001
              name: syslog-udp
            - containerPort: 5002
              name: http
            - containerPort: 9600
              name: api
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/logstash/config
            - name: logstash-pipeline-volume
              mountPath: /usr/share/logstash/pipeline
      volumes:
        - name: config-volume
          configMap:
            name: logstash-configmap
            items:
              - key: logstash.yml
                path: logstash.yml
        - name: logstash-pipeline-volume
          configMap:
            name: logstash-configmap
            items:
              - key: logstash.conf
                path: logstash.conf
---
kind: Service
apiVersion: v1
metadata:
  name: logstash-service
  namespace: kube-system
spec:
  selector:
    app: logstash
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: syslog-tcp
    - protocol: UDP
      port: 5001
      targetPort: 5001
      name: syslog-udp
    - protocol: TCP
      port: 5044
      targetPort: 5044
      name: beats
    - protocol: TCP
      port: 5002
      targetPort: 5002
      name: http
    - protocol: TCP
      port: 9600
      targetPort: 9600
      name: api
  type: ClusterIP
